# GameBEye

./: .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  GameBEye.html  README.md  _config.yml  examples.html  gamebeye.html  genindex.html  hardware.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js
.doctrees/: GameBEye.doctree  environment.pickle  examples.doctree  gamebeye.doctree  hardware.doctree  index.doctree  installation.doctree
.doctrees/GameBEye/: colors.doctree  filters.doctree  gbcamcolors.doctree  gbcamfilters.doctree  gbcamimage.doctree  image.doctree
.doctrees/examples/: colorizing_image.doctree  converting_images.doctree  display_images.doctree  printing_image.doctree
.doctrees/gamebeye/: colors.doctree  filters.doctree  image.doctree
.github/workflows/: gh-pages.yml  jekyll.yml  pytests.yml
GameBEye/: __init__.py  colors.html  filter_helpers.py  filters.html  gbcamcolors.html  gbcamcolors.py  gbcamfilters.html  gbcamfilters.py  gbcamimage.html  gbcamimage.py  image.html
GameBEye/gbcamcolors/: __init__.py  color_helpers.py  gbcamcolors.py
GameBEye/gbcamfilters/: filter_helpers.py  gbcamfilters.py
GameBEye/gbcamimage/: gbcamimage.py
_includes/: head.html
_sources/: examples.rst.txt  gamebeye.rst.txt  hardware.rst.txt  index.rst.txt
_sources/examples/: colorizing_image.rst.txt  display_images.rst.txt  printing_image.rst.txt
docs/: GameBEye.rst  conf.py  examples.rst  gamebeye.rst  hardware.rst  index.rst  installation.rst
docs/GameBEye/: colors.rst  filters.rst  gbcamcolors.rst  gbcamfilters.rst  gbcamimage.rst  image.rst
docs/examples/: colorizing_image.rst  converting_images.rst  display_images.rst  printing_image.rst
docs/gamebeye/: colors.rst  image.rst
examples/: 01_bis_reading_and_displaying_an_image.py  01_reading_and_displaying_an_image.py  02_changing_image_color.py  03_display_color_palette.py  04_print_image_paper.py  colorizing_image.html  converting_images.html  display_images.html  printing_image.html
gallery/: feed.xml  index.html
gamebeye/: __init__.py  color_helpers.py  colors.html  filters.html  gbcamcolors.py  gbcamfilters.py  gbcamimage.py  gbcampalettes.py  image.html
gamebeye/gbcamcolors/: __init__.py  color_helpers.py  gbcolorpalettes.py  gbcolorvalues.py
gamebeye/gbcamimage/: __init__.py  filter_helpers.py  (+2 more)
tests/: __init__.py  test_color_helpers.py  test_gbcamcolors.py  test_gbcamimage.py  test_gbcampalettes.py
(+3 files in other folders)
